$Id$

v0.83.11	28-Jan-2006


v0.83.10	25-Jan-2006 - 28-Jan-2006

	upgrade:
		In menus 7.n.3.14 check if the NR flag is off, unless you need
		it (which I doubt).

	mbcico:
		Implemented binkp NR option. We don't really make use of it,
		but if the remote mailer whishes to send files in NR mode it
		will work.

	mbsetup:
		Added NR switch to the nodes session setup.


v0.83.9		23-Jan-2006 - 25-Jan-2006

	mbstat:
		Don't write in errorlog after normal termination.

	mbtask:
		In IBC refuse to add a user when there is no known server for
		that user.
		Added setup checks for two main configuration settings for IBC
		and fail to start if they are missing.
		Don't start connections with IBC servers that miss settings in
		the chatserver setup.
		Added some code to trap mbtask crashing during chat and start
		mail processing.
		Several commands now send the server address from the servers
		setup to the neighbours.
		After server connect send the correct usernames already in chat.


v0.83.8		22-Jan-2006 - 23-Jan-2006

	mbsebbs:
		Fixed a strange bug that ftell didn't work right, this caused
		corrupt bluewave download packets.
		Bluewave is now big/little endian correct.

	mbtask:
		Added logging of some user messages to chat.log
		Added logging for crashes during chatsessions.


v0.83.7		31-Dec-2005 - 22-Jan-2006

	upgrade:
		Add extra switches to unarchiver commands netry 11, see 
		mbsetup for the archivers.

	mbsebbs:
		There are no paths anymore in OLR download packet files.
		Made OLR bluewave packets CPU independant. (under test).

	mbfido:
		Made searching file file_id.diz case insensitive.

	mbfile:
		Made searching file file_id.diz case insensitive.

	mbsetup:
		Added switches to default extract commands for file_id.diz 
		files to:
		  nomarch -U
		  rar -cu
		  unrar -cu
		  unzip -L
		Other archives don't support forced upper or lowercase.
		  

v0.83.6		17-Dec-2005 - 31-Dec-2005

	mbfido:
		Removed gated SB debug logmessages.