@@ -2,6 +2,10 @@ $Id$
 
 v0.83.11	28-Jan-2006
 
+	mbtask:
+		Added logging for possible detection of dialup IBC neighbour
+		address change.
+
 
 v0.83.10	25-Jan-2006 - 28-Jan-2006
 
